--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,15 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
+
+
+.Cont{
+    font-family: Times New Roman;
+  }
+  .card{
+    background-color: blanchedalmond;
+    display: flex;
+    
+  }
+    
